# smolisa-emu

./: .clang-tidy  .gitignore  3RDPARTY.md  CMakeLists.txt  LICENSE.md  README.md  core.cpp  core.hpp  instruction.hpp  main.cpp  memory.cpp  memory.hpp  registers.hpp  setup.py  types.hpp
assets/: .gitignore
doc/: asm.md  cpu.md  references.md
doc/llvm-notes/: Branching.md  Random TODOs.md  Relocatable symbols.md  TableGen.md
examples/: framebuffer_write.s  generate_video_stream.cpp  loop.s  video.s
include/smol/: core.hpp  instruction.hpp  masks.hpp  memory.hpp  opcodes.hpp  registers.hpp  types.hpp  util.hpp
include/smol/asm/: assembler.hpp  charutil.hpp  instructioninfo.hpp  registerinfo.hpp  tokenizer.hpp  tokens.hpp
include/smol/common/: instruction.hpp  ioutil.hpp  masks.hpp  opcodes.hpp  registers.hpp
include/smol/emu/: core.hpp  memory.hpp
include/smol/emu/framebuffer/: framebuffer.hpp
include/smol/framebuffer/: framebuffer.hpp
roms/: bank_crash_test.smoldump  framebuffer_write_test.smoldump  g6_write_test.smoldump  unaligned_crash_test.smoldump
smol2/asm/: __init__.py  assembler.py  entities.py  instruction.py  label.py  opclasses.py  ops.py  util.py
smol2/examples/: bfi.c  bfi.py  fib.py  framebuffer_write.py  generate_video_stream.cpp  loop.py  video.py
smol2/hw/: alu.py  control.py  datapath.py  main.py  ram.py  regfile.py  top.py
smolisa_py/asm/: assembler.py  instruction.py  label.py  macros.py  register.py
smolisa_py/examples/: bfi.c  bfi.py  fib.py  framebuffer_write.py  loop.py  video.py
smolisa_py/hw/: alu.py  control.py  datapath.py  main.py  ram.py  regfile.py  top.py
src/: core.cpp  ioutil.cpp  main.cpp  memory.cpp
src/framebuffer/: framebuffer.cpp
src/smol/asm/: assembler.cpp  assembler.hpp  charutil.hpp  instructioninfo.hpp  main.cpp  registerinfo.hpp  tokenizer.cpp  tokenizer.hpp  tokens.hpp
src/smol/common/: instruction.hpp  ioutil.cpp  ioutil.hpp  opcodes.hpp  registers.hpp
src/smol/emu/: core.cpp  core.hpp  main.cpp  memory.cpp  memory.hpp
src/smol/emu/framebuffer/: framebuffer.cpp  framebuffer.hpp
